<resources>
    <string name="app_name">Projekt_AM_2023</string>
    <string name="tagNameLabel">Name:</string>
    <string name="tagNameHint">Name of the tag</string>
    <string name="colorLabel">Color:</string>
    <string name="previewLabel">Preview:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="tagColor">tag color</string>
    <string name="tagColorPicker">Tag color</string>
    <string name="titleHint">Task title</string>
    <string name="userHint">User name</string>
    <string name="dateLabel">Date</string>
    <string name="startLabel">Start</string>
    <string name="startDateHint">Date</string>
    <string name="startTimeHint">Time</string>
    <string name="endLabel">End</string>
    <string name="endDateHint">Date</string>
    <string name="endTimeHint">Time</string>
    <string name="descriptionLabel">Description</string>
    <string name="descriptionHint">Add more details…</string>
    <string name="subtasksLabel">Subtasks</string>
    <string name="tagsLabel">Tags</string>
    <string name="userImageDescription">User avatar</string>
    <string name="addTag">New Tag</string>
    <string name="addSubtask">New subtask</string>
    <string name="userListTitle">Select assignee</string>
    <string name="tagListTitle">Select tag</string>
    <string name="sectionListTitle">Select section</string>
    <string name="sectionHint">Section</string>
    <string name="sectionLabel">Section</string>
    <string name="sectionNameLabel">Name:</string>
    <string name="sectionNameHint">Section name</string>
    <string name="listLabel">List</string>
    <string name="monthLabel">Month</string>
    <string name="sectionsLabel">Sections</string>
    <string name="noneLabel">None</string>
    <string name="weekLabel">Week</string>
    <string name="fab_description">Add element</string>
    <string name="fold_section">Fold section</string>
    <string name="assignee_avatar">Assignee avatar</string>
    <string name="boardLabel">Board</string>
    <plurals name="section_task_count">
        <item quantity="one">(%d task)</item>
        <item quantity="other">(%d tasks)</item>
    </plurals>

</resources>
